--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
-  <title>Raymond Ten X Habitat, Thane - Smart 1Bed Home @?85L All Inc</title>
+  <title>Dosti West County, Thane - Premium 2 BHK Homes Less than ₹ 95L All Inc</title>
   <meta name="Keywords" content=""/>
   <meta name="Description" content="Pay Just 10 % Now Nothing for 2 Years*. Get The Best Rate. Sales & Customer Support. Instant Call Back. Exclusive Discounts. Free Site Visit."/>
 
