--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
-  <title>Dosti West County, Thane - Premium 2 BHK Homes Less than ₹ 95L All Inc</title>
+  <title>Dosti West County, Thane - Premium 2 & 3 BHK Homes Starts from ₹ 91L All Inc</title>
   <meta name="Keywords" content=""/>
   <meta name="Description" content="Pay Just 10 % Now Nothing for 2 Years*. Get The Best Rate. Sales & Customer Support. Instant Call Back. Exclusive Discounts. Free Site Visit."/>
 
   <style>:root{--colorPrimary: #e8203e;--colorSecondary:#e8203e;--colorBtn:#ffffff}#loader{width:100vw;height:100vh;background-color:rgba(255,255,255,1);position:fixed;top:0;left:0;z-index:1040}.loader-text{display:block;text-align:center;color:#d7d7d7;font-family:Arial,sans-serif;position:absolute;top:50%;left:50%;-webkit-transform:translate(-50%,-50%);-moz-transform:translate(-50%,-50%);-ms-transform:translate(-50%,-50%);-o-transform:translate(-50%,-50%);transform:translate(-50%,-50%)}.loading{height:0;width:0;padding:4vw;border:.8vw solid #ccc;border-right-color:#888;border-radius:6vw;-webkit-animation:rotate 1s infinite linear}@keyframes loader{0%{filter:grayscale(0)}50%{filter:grayscale(100%)}100%{filter:grayscale(0)}}.loader-logo{width:300px;-webkit-animation:loader 1.3s infinite linear;-moz-animation:loader 1.3s infinite linear;-ms-animation:loader 1.3s infinite linear;-o-animation:loader 1.3s infinite linear;animation:loader 1.3s infinite linear}.pload{display:none}</style>
   <link rel="preload" href="micro_assets/template_8/css/style.css" as="style">
   <link rel="preload" href="micro_assets/template_8/js/app.js" as="script">
-  <!-- <link rel="preload" href="http://www.raymond-tenxhabitat.co.in/micro_assets/template_8/fonts/roboto-bold-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="http://www.raymond-tenxhabitat.co.in/micro_assets/template_8/fonts/roboto-regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="http://www.raymond-tenxhabitat.co.in/micro_assets/template_8/fonts/muli-variablefont_wght-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="http://www.raymond-tenxhabitat.co.in/micro_assets/template_8/fonts/micon.woff2" as="font" type="font/woff2" crossorigin> -->
+  <!-- <link rel="preload" href="http://... /micro_assets/template_8/fonts/roboto-bold-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="http:// /micro_assets/template_8/fonts/roboto-regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="http:// /micro_assets/template_8/fonts/muli-variablefont_wght-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="http:// /micro_assets/template_8/fonts/micon.woff2" as="font" type="font/woff2" crossorigin> -->
   <link rel="dns-prefetch" href="http://google-analytics.com/" crossorigin>
   <link rel="dns-prefetch" href="http://googletagmanager.com/" crossorigin>
   <link rel="dns-prefetch" href="http://www.googleadservices.com/" crossorigin>
